<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_white"
    tools:context=".ui.activity.auth.LookingForActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp32"
            android:layout_marginTop="@dimen/margin_48"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_looking_for_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView6"
            style="@style/T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:fontFamily="@font/futura_medium"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/dp5"
            android:text="@string/looking_for_title"
            android:textSize="@dimen/dp32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView7"
            style="@style/T2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:layout_marginTop="@dimen/dp12"
            android:fontFamily="@font/futura_regulr"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/looking_for_subtitle"
            android:textColor="@color/primary_grey"
            android:textSize="@dimen/dp18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp32"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <TextView
                android:id="@+id/casual"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp42"
                android:layout_marginTop="@dimen/dp32"
                android:background="@drawable/button_looking_for_bg"
                android:fontFamily="@font/futura_regulr"
                android:gravity="center"
                android:textSize="@dimen/dp16"
                android:text="@string/casual_dating"
                android:textAllCaps="true"
                android:textColor="@color/color_primary" />

            <TextView
                android:id="@+id/seriousRelationship"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp42"
                android:layout_marginTop="@dimen/dp16"
                android:background="@drawable/button_looking_for_bg"
                android:fontFamily="@font/futura_regulr"
                android:gravity="center"
                android:text="@string/serious_relationships"
                android:textSize="@dimen/dp16"
                android:textAllCaps="true"
                android:textColor="@color/color_primary" />

            <TextView
                android:id="@+id/goodConversation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp42"
                android:layout_marginTop="@dimen/dp16"
                android:background="@drawable/button_looking_for_bg"
                android:fontFamily="@font/futura_regulr"
                android:gravity="center"
                android:textSize="@dimen/dp16"
                android:text="@string/good_conversations"
                android:textAllCaps="true"
                android:textColor="@color/color_primary" />

            <TextView
                android:id="@+id/iDontKnowYet"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp42"
                android:layout_marginTop="@dimen/dp16"
                android:background="@drawable/button_looking_for_bg"
                android:fontFamily="@font/futura_regulr"
                android:gravity="center"
                android:text="@string/i_don_t_know_yet"
                android:textAllCaps="true"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/dp16" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:id="@+id/back"
            style="@style/T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginBottom="@dimen/dp36"
            android:fontFamily="@font/futura_regulr"
            android:gravity="center"
            android:text="BACK"
            android:textColor="@color/primary_grey"
            android:textSize="@dimen/dp16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            style="@style/ButtonInactive"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="@dimen/dp32"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginBottom="@dimen/dp32"
            android:height="@dimen/margin_10"
            android:clickable="false"
            android:text="@string/next"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>