<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_white"
    tools:context=".ui.activity.auth.LocationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            style="@style/T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp100"
            android:fontFamily="@font/futura_medium"
            android:gravity="center"
            android:text="@string/location_title"
            android:textSize="@dimen/dp32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            style="@style/T2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:layout_marginTop="@dimen/dp24"
            android:fontFamily="@font/futura_regulr"
            android:gravity="start"
            android:lineSpacingExtra="5dp"
            android:text="@string/location_description"
            android:textColor="@color/primary_grey"
            android:textSize="@dimen/dp18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enableLocation"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/dp32"
            android:layout_marginBottom="@dimen/dp32"
            android:text="@string/enable_location"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>