<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_white"
    tools:context=".ui.activity.auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/numberLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_48"
            android:src="@drawable/ic_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:fontFamily="@font/futura_medium"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:text="@string/phone_title"
            android:textSize="@dimen/dp32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView5"
            style="@style/T2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:layout_marginTop="@dimen/dp12"
            android:fontFamily="@font/futura_regulr"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:text="@string/phone_description"
            android:textColor="@color/primary_grey"
            android:textSize="@dimen/dp18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_marginHorizontal="@dimen/dp28"
            android:layout_marginTop="@dimen/dp24"
            android:background="@drawable/selector_edit_text"
            android:fontFamily="@font/futura_medium"
            android:hint="PHONE NUMBER"
            android:inputType="number|textNoSuggestions"
            android:maxLength="10"
            android:paddingStart="@dimen/dp55"
            android:textColor="@color/color_primary"
            android:textColorHint="#66481866"
            android:textSize="@dimen/dp18"
            android:theme="@style/MyEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-48dp"
            android:fontFamily="@font/futura_medium"
            android:text="+91"
            android:textColor="#51238C"
            android:textSize="@dimen/dp18"
            app:layout_constraintBottom_toBottomOf="@+id/phoneNumber"
            app:layout_constraintEnd_toStartOf="@+id/phoneNumber"
            app:layout_constraintTop_toTopOf="@+id/phoneNumber" />

        <TextView
            style="@style/T2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/futura_regulr"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:text="@string/login_sub_description"
            android:textColor="#66201E1F"
            android:textSize="@dimen/dp16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />


        <TextView
            android:id="@+id/back"
            style="@style/T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginBottom="@dimen/dp36"
            android:fontFamily="@font/futura_regulr"
            android:gravity="center"
            android:text="BACK"
            android:textColor="@color/primary_grey"
            android:textSize="@dimen/dp16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            style="@style/ButtonInactive"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="@dimen/dp32"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginBottom="@dimen/dp32"
            android:height="@dimen/margin_10"
            android:clickable="false"
            android:text="@string/next"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/otpLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            style="@style/T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp100"
            android:fontFamily="@font/futura_medium"
            android:text="@string/otp_title"
            android:textSize="@dimen/dp32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            style="@style/T2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:layout_marginTop="@dimen/dp12"
            android:fontFamily="@font/futura_regulr"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/otp_description"
            android:textColor="@color/primary_grey"
            android:textSize="@dimen/dp18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_marginHorizontal="@dimen/dp28"
            android:layout_marginTop="@dimen/dp24"
            android:background="@drawable/selector_edit_text"
            android:fontFamily="@font/futura_medium"
            android:gravity="center"
            android:hint="_ _ _ _ _ _"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/color_primary"
            android:textColorHint="#6651238C"
            android:theme="@style/MyEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/resendOtp"
            style="@style/T2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/futura_regulr"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/resend_otp"
            android:textColor="@color/primary_grey"
            android:textSize="@dimen/dp18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp" />


        <TextView
            android:id="@+id/backFromOtp"
            style="@style/T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginBottom="@dimen/dp36"
            android:fontFamily="@font/futura_regulr"
            android:gravity="center"
            android:text="BACK"
            android:textColor="@color/primary_grey"
            android:textSize="@dimen/dp16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextFromOtp"
            style="@style/ButtonInactive"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="@dimen/dp32"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginBottom="@dimen/dp32"
            android:height="@dimen/margin_10"
            android:text="@string/next"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>